--- a/Group3.html
+++ b/Group3.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta http-equiv="refresh" content="1; URL= https://rutgers.zoom.us/my/yp305?pwd=SDZoL0ErZG5RZmxTWFVXNnp0WVByUT09" />
+</head>
 <body>
-
-<meta http-equiv="refresh" content="1; URL= https://rutgers.zoom.us/my/yp305?pwd=SDZoL0ErZG5RZmxTWFVXNnp0WVByUT09" />
-
+  <h1> Redirecting... </h1>
 </body>
 </html>
