--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<p>Join Group 3 Zoom <a href="https://rutgers.zoom.us/my/yp305?pwd=SDZoL0ErZG5RZmxTWFVXNnp0WVByUT09">click here</a>.</p>
 
 </body>
 </html>
